# ORMbenchmark

./: .gitignore  Cargo.toml
database/: source-reference.txt
diesel-bench/: .env  Cargo.toml  diesel.toml
diesel-bench/src/: main.rs  models.rs  schema.rs
doctrine-bench/: bootstrap.php  composer.json
doctrine-bench/config/: cli-config.php
doctrine-bench/src/: main.php
doctrine-bench/src/entities/: Customer.php  InsertableCustomer.php
sprattus-bench/: Cargo.toml
sprattus-bench/src/: main.rs  models.rs
