[package]
name = "diesel-bench"
version = "0.1.0"
authors = ["Martijn <martijn@tweedegolf.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "=1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
chrono = "0.4.10"