[package]
name = "sprattus-bench"
version = "0.1.0"
authors = ["Martijn <martijn@tweedegolf.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sprattus = { version = "0.0.1", features = ["with-chrono-0_4"] }
tokio = "0.2.0-alpha.6"
chrono = "0.4.10"